welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.SnakeBuggle
  	if (getDirection()==direction.EST){
                            ^SnakeBuggle:30: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.SnakeBuggle
    }else if (getDirection()==direction.OUEST){
                              ^SnakeBuggle:30: error: type mismatch;
 found   : Unit
 required: Boolean
    }else if (getDirection()==direction.OUEST){
          ^SnakeBuggle:52: error: Boolean does not take parameters
      }else(getDirection()==Direction.OUEST){
                                            ^